Update customer service assistant RAG notebook - tested and working multi-agent system

--- a/tan_project2_customerServiceAssistant_query+retrieval_response_rag.ipynb
+++ b/tan_project2_customerServiceAssistant_query+retrieval_response_rag.ipynb
@@ -5,9 +5,9 @@
    "id": "4agent-header",
    "metadata": {},
    "source": [
-    "# Customer Service Assistant - 4-Agent RAG System\n",
+    "# Customer Service Assistant - Multi-Agents RAG System\n",
     "\n",
-    "This project implements a customer service assistant that answers product-related queries using a 4-agent RAG system:\n",
+    "This project implements a customer service assistant that answers product-related queries using a multi-agents RAG system:\n",
     "\n",
     "1. **Agent 1**: Document Loader & Query Embedding Agent\n",
     "2. **Agent 2a**: Query Processing Agent (enhances user queries)\n",
@@ -38,13 +38,13 @@
     "print(\"Installing required packages if needed...\")\n",
     "try:\n",
     "    from sentence_transformers import SentenceTransformer\n",
-    "    print(\"\u2713 sentence-transformers already installed\")\n",
+    "    print(\"✓ sentence-transformers already installed\")\n",
     "except ImportError:\n",
     "    print(\"Installing sentence-transformers...\")\n",
     "    import subprocess\n",
     "    subprocess.check_call([\"pip\", \"install\", \"sentence-transformers\"])\n",
     "    from sentence_transformers import SentenceTransformer\n",
-    "    print(\"\u2713 sentence-transformers installed successfully\")"
+    "    print(\"✓ sentence-transformers installed successfully\")"
    ]
   },
   {
@@ -57,7 +57,7 @@
     "# Load local embedding model\n",
     "print(\"Loading local embedding model...\")\n",
     "embedding_model = SentenceTransformer('all-MiniLM-L6-v2')\n",
-    "print(\"\u2713 Embedding model loaded successfully!\")\n",
+    "print(\"✓ Embedding model loaded successfully!\")\n",
     "print(f\"Model: {embedding_model.get_sentence_embedding_dimension()} dimensions\")"
    ]
   },
@@ -83,7 +83,7 @@
     "            full_text = f\"{current_category}: {para.text.strip()}\" if current_category else para.text.strip()\n",
     "            chunks.append(full_text)\n",
     "    \n",
-    "    print(f\"\u2713 Loaded {len(chunks)} text chunks from document\")\n",
+    "    print(f\"✓ Loaded {len(chunks)} text chunks from document\")\n",
     "    return chunks"
    ]
   },
@@ -102,7 +102,7 @@
     "# Test the embedding function\n",
     "test_query = \"What is the price of iPhone 15?\"\n",
     "test_embedding = embed_query(test_query)\n",
-    "print(f\"\u2713 Test embedding generated: {len(test_embedding)} dimensions\")"
+    "print(f\"✓ Test embedding generated: {len(test_embedding)} dimensions\")"
    ]
   },
   {
@@ -124,15 +124,15 @@
     "    # Get or create collection\n",
     "    try:\n",
     "        collection = client.get_collection(name=collection_name)\n",
-    "        print(f\"\u2713 Using existing collection: {collection_name}\")\n",
+    "        print(f\"✓ Using existing collection: {collection_name}\")\n",
     "    except:\n",
     "        collection = client.create_collection(name=collection_name)\n",
-    "        print(f\"\u2713 Created new collection: {collection_name}\")\n",
+    "        print(f\"✓ Created new collection: {collection_name}\")\n",
     "    \n",
     "    # Check if collection already has documents\n",
     "    count = collection.count()\n",
     "    if count > 0:\n",
-    "        print(f\"\u2713 Collection already contains {count} documents\")\n",
+    "        print(f\"✓ Collection already contains {count} documents\")\n",
     "        return collection\n",
     "    \n",
     "    print(f\"Creating embeddings for {len(chunks)} chunks...\")\n",
@@ -144,7 +144,7 @@
     "        if (i + 1) % 5 == 0:\n",
     "            print(f\"  Processed {i + 1}/{len(chunks)} chunks...\")\n",
     "\n",
-    "    print(\"\u2713 Knowledge base built successfully!\")\n",
+    "    print(\"✓ Knowledge base built successfully!\")\n",
     "    return collection"
    ]
   },
@@ -158,7 +158,7 @@
     "# Agent 2a: Query Processing Agent\n",
     "def process_query(query):\n",
     "    \"\"\"Process and enhance user queries for better retrieval\"\"\"\n",
-    "    print(f\"\\n\ud83d\udd0d Processing query: '{query}'\")\n",
+    "    print(f\"\\n Processing query: '{query}'\")\n",
     "    \n",
     "    # Clean and normalize the query\n",
     "    processed_query = query.strip().lower()\n",
@@ -183,7 +183,7 @@
     "    if key_terms:\n",
     "        enhanced_query = f\"{query} {' '.join(key_terms)}\"\n",
     "    \n",
-    "    print(f\"\u2713 Query enhanced: '{query}' \u2192 '{enhanced_query}'\")\n",
+    "    print(f\"✓ Query enhanced: '{query}' → '{enhanced_query}'\")\n",
     "    return enhanced_query"
    ]
   },
@@ -197,7 +197,7 @@
     "# Agent 2b: Document Retrieval Agent\n",
     "def retrieve_documents(embedding, collection, k=3):\n",
     "    \"\"\"Retrieve relevant documents based on query embedding\"\"\"\n",
-    "    print(f\"\ud83d\udd0d Searching for {k} most relevant documents...\")\n",
+    "    print(f\" Searching for {k} most relevant documents...\")\n",
     "    \n",
     "    try:\n",
     "        # Perform vector similarity search\n",
@@ -206,16 +206,16 @@
     "        \n",
     "        # Process and rank results\n",
     "        if docs:\n",
-    "            print(f\"\u2713 Found {len(docs)} relevant documents\")\n",
+    "            print(f\"✓ Found {len(docs)} relevant documents\")\n",
     "            # Join documents with separators for better readability\n",
     "            formatted_docs = \"\\n---\\n\".join(docs)\n",
     "            return formatted_docs\n",
     "        else:\n",
-    "            print(\"\u26a0 No relevant documents found\")\n",
+    "            print(\"⚠ No relevant documents found\")\n",
     "            return \"\"\n",
     "            \n",
     "    except Exception as e:\n",
-    "        print(f\"\u274c Error retrieving documents: {e}\")\n",
+    "        print(f\" Error retrieving documents: {e}\")\n",
     "        return \"\""
    ]
   },
@@ -229,7 +229,7 @@
     "# Agent 3: Response Generation Agent\n",
     "def generate_response(context, user_input):\n",
     "    \"\"\"Generate human-like responses based on retrieved context\"\"\"\n",
-    "    print(f\"\\n\ud83e\udd16 Generating response for: '{user_input}'\")\n",
+    "    print(f\"\\n Generating response for: '{user_input}'\")\n",
     "    \n",
     "    if not context:\n",
     "        return \"I'm sorry, I couldn't find relevant information to answer your question. Could you please rephrase or ask about a different Apple product?\"\n",
@@ -266,31 +266,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Controller Function - Orchestrates all 4 agents\n",
-    "def run_four_agent_rag_system(doc_path):\n",
-    "    \"\"\"Main function that coordinates all 4 agents\"\"\"\n",
-    "    print(\"\ud83d\ude80 Starting 4-Agent RAG System...\")\n",
+    "# Controller Function - Orchestrates all agents\n",
+    "def run_multi_agent_rag_system(doc_path):\n",
+    "    \"\"\"Main function that coordinates all agents\"\"\"\n",
+    "    print(\" Starting multi-Agent RAG System...\")\n",
     "    print(\"=\" * 50)\n",
     "    \n",
     "    # Agent 1: Load documents and prepare embeddings\n",
-    "    print(\"\\n\ud83d\udcda Agent 1: Document Loader & Embedding Agent\")\n",
+    "    print(\"\\n Agent 1: Document Loader & Embedding Agent\")\n",
     "    chunks = load_docx_chunks(doc_path)\n",
     "    \n",
     "    # Build knowledge base\n",
-    "    print(\"\\n\ud83d\uddc4\ufe0f Building Knowledge Base...\")\n",
+    "    print(\"\\n Building Knowledge Base...\")\n",
     "    collection = build_knowledge_base(chunks)\n",
     "    \n",
-    "    print(\"\\n\u2705 Customer service assistant (4-Agent RAG system) ready!\")\n",
+    "    print(\"\\n Customer service assistant (multi-Agent RAG system) ready!\")\n",
     "    print(\"Ask product-related questions about Apple products.\")\n",
     "    print(\"Type 'exit', 'quit', or 'bye' to end the session.\")\n",
     "    print(\"=\" * 50)\n",
     "\n",
     "    while True:\n",
     "        try:\n",
-    "            user_input = input(\"\\n\ud83d\udc64 You: \").strip()\n",
+    "            user_input = input(\"\\n You: \").strip()\n",
     "            \n",
     "            if user_input.lower() in [\"exit\", \"quit\", \"bye\"]:\n",
-    "                print(\"\\n\ud83e\udd16 Customer Assistant: Thank you! Have a great day! \ud83d\udc4b\")\n",
+    "                print(\"\\n Customer Assistant: Thank you! Have a great day! \")\n",
     "                break\n",
     "\n",
     "            if not user_input:\n",
@@ -309,13 +309,13 @@
     "            # Agent 3: Generate response using context\n",
     "            response = generate_response(context, user_input)\n",
     "            \n",
-    "            print(f\"\\n\ud83e\udd16 Customer Assistant: {response}\")\n",
+    "            print(f\"\\n Customer Assistant: {response}\")\n",
     "            \n",
     "        except KeyboardInterrupt:\n",
-    "            print(\"\\n\\n\ud83e\udd16 Customer Assistant: Session interrupted. Goodbye! \ud83d\udc4b\")\n",
+    "            print(\"\\n\\n Customer Assistant: Session interrupted. Goodbye! \")\n",
     "            break\n",
     "        except Exception as e:\n",
-    "            print(f\"\\n\u274c Error: {e}\")\n",
+    "            print(f\"\\n Error: {e}\")\n",
     "            print(\"Please try asking your question again.\")"
    ]
   },
@@ -328,8 +328,8 @@
    "source": [
     "# Set the document path\n",
     "doc_path = \"/Users/bessy/codework_c/CSTU/agenticAI/customer_service_assistant_3agents/apple_product_prices_2025.docx\"\n",
-    "print(f\"\ud83d\udcc4 Document path: {doc_path}\")\n",
-    "print(f\"\ud83d\udcc1 File exists: {os.path.exists(doc_path)}\")"
+    "print(f\" Document path: {doc_path}\")\n",
+    "print(f\" File exists: {os.path.exists(doc_path)}\")"
    ]
   },
   {
@@ -340,25 +340,25 @@
    "outputs": [],
    "source": [
     "# Test individual functions to ensure they work\n",
-    "print(\"\ud83e\uddea Testing individual functions...\")\n",
+    "print(\" Testing individual functions...\")\n",
     "\n",
     "# Test document loading\n",
     "print(\"\\n1. Testing document loading...\")\n",
     "chunks = load_docx_chunks(doc_path)\n",
-    "print(f\"   \u2713 Loaded {len(chunks)} chunks\")\n",
+    "print(f\"   ✓ Loaded {len(chunks)} chunks\")\n",
     "\n",
     "# Test query processing\n",
     "print(\"\\n2. Testing query processing...\")\n",
     "test_query = \"What is the price of iPhone 15?\"\n",
     "enhanced = process_query(test_query)\n",
-    "print(f\"   \u2713 Query enhanced: {enhanced}\")\n",
+    "print(f\"   ✓ Query enhanced: {enhanced}\")\n",
     "\n",
     "# Test embedding\n",
     "print(\"\\n3. Testing embedding generation...\")\n",
     "embedding = embed_query(test_query)\n",
-    "print(f\"   \u2713 Embedding generated: {len(embedding)} dimensions\")\n",
+    "print(f\"   ✓ Embedding generated: {len(embedding)} dimensions\")\n",
     "\n",
-    "print(\"\\n\u2705 All individual functions tested successfully!\")"
+    "print(\"\\n All individual functions tested successfully!\")"
    ]
   },
   {
@@ -368,9 +368,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run the 4-Agent RAG System\n",
-    "print(\"\ud83d\ude80 Launching 4-Agent RAG System...\")\n",
-    "run_four_agent_rag_system(doc_path)"
+    "# Run the multi-Agents RAG System\n",
+    "print(\" Launching Multi-Agents RAG System...\")\n",
+    "run_multi_agent_rag_system(doc_path)"
    ]
   }
  ],
@@ -389,6 +389,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
