--- a/tan_project2_customerServiceAssistant_query+retrieval_response_rag.ipynb
+++ b/tan_project2_customerServiceAssistant_query+retrieval_response_rag.ipynb
@@ -118,7 +118,7 @@
     "    print(f\"Building knowledge base with collection: {collection_name}\")\n",
     "    \n",
     "    client = chromadb.PersistentClient(\n",
-    "        path = \"./chroma_db\",\n",
+    "        path = \"/Users/bessy/codework_c/CSTU/agenticAI/customer_service_assistant_3agents\",\n",
     "        settings = Settings(anonymized_telemetry=False))\n",
     "    \n",
     "    # Get or create collection\n",
@@ -327,19 +327,7 @@
    "outputs": [],
    "source": [
     "# Set the document path\n",
-# Configuration - Update these paths for your environment
-print("Configuration Settings:")
-print("=" * 50)
-
-# Update these paths according to your setup
-DOC_PATH = "./apple_product_prices_2025.docx"  # Path to your Word document
-DB_PATH = "./chroma_db"  # Path for ChromaDB storage
-
-print(f"Document path: {DOC_PATH}")
-print(f"Database path: {DB_PATH}")
-print(f"Document exists: {os.path.exists(DOC_PATH)}")
-print("\nNote: Update DOC_PATH and DB_PATH variables above if needed!")
-    "doc_path = \"./chroma_db/apple_product_prices_2025.docx\"\n",
+    "doc_path = \"/Users/bessy/codework_c/CSTU/agenticAI/customer_service_assistant_3agents/apple_product_prices_2025.docx\"\n",
     "print(f\" Document path: {doc_path}\")\n",
     "print(f\" File exists: {os.path.exists(doc_path)}\")"
    ]
